--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.2);
     z-index: 20;
 }
 
@@ -100,14 +100,15 @@ ul li:hover > ul,
     position: fixed;
     display: flex;
     flex-direction: column;
-    top: 30%;
-    left: 30%;
-    width: 40%;
     align-items: flex-start;
-    justify-content: center;
-    top: 12rem;
+    justify-content: flex-start;
+    top: 25%;
+    left: 35%;
+    width: 30%;
+    height: 50%;
     margin: 0 auto;
-    background: #729B79;
+    padding: 0.5rem 1rem;
+    background: white;
     border-radius: 1rem;
     opacity: 0;
     transform: scale(0.5);
@@ -115,17 +116,43 @@ ul li:hover > ul,
 }
 
 .number__menu h4 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: center;
     margin: 0.5rem;
 }
 
+.close {
+    position: absolute;
+    right: 32px;
+    top: 0;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+    background: none;
+    }
+    .close:hover {
+    opacity: 1;
+    }
+    .close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: red;
+    }
+    .close:before {
+    transform: rotate(45deg);
+    }
+    .close:after {
+    transform: rotate(-45deg);
+    }
 
 .contacts {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .up__contacts {
@@ -137,51 +164,37 @@ ul li:hover > ul,
     padding: 0;
 }
 
-.close__button {
-    background: none;
-    border: none;
-}
-
-.line {
-    position: absolute;
-    width: 2rem;
-    border: 2px solid black;
-    right: 20px;
-    top: 25px;
-    border-radius: 1rem;
-}
-
-.line-1 {
-    transform: rotateZ(45deg);
-}
-
-.line-2 {
-    transform: rotateZ(-45deg);
-}
-
-.line:hover {
-    border-color: red;
-}
-
-
 .contacts__items {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     margin-top: 0;
     list-style: none;
     font-weight: bold;
+    padding: 1rem;
 }
 
 .contacts__item p {
-    color: #2E2C2F;
+    color: black;
+    margin-top: 0.5rem;
 }
 
 .contacts__item a {
-    color: #2E2C2F;
+    color: blue;
     text-decoration: none;
+}
+
+.call__time {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0;
+}
+
+.call__time__items {
+    list-style: none;
 }
 
 .main-header {
@@ -397,7 +410,7 @@ ul li:hover > ul,
     left: 30%;
     width: 40%;
     border-radius: 1rem;
-    background: #729B79;
+    background: white;
     opacity: 0;
     transform: scale(0.5);
     transition: transform 0.2s ease;
@@ -434,12 +447,12 @@ ul li:hover > ul,
     list-style: none;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     padding: 0;
 }
 
 .list__city {
-    margin: 0;
+    margin: 0.5rem auto;
     padding: 0;
 }
 
@@ -449,9 +462,9 @@ ul li:hover > ul,
     font-size: 1.1rem;
 }
 
-.list__city a:hover,
-.list__city a:active {
-    color: #F3E8EE;
+.Kiev__city {
+    border: 1px solid green;
+    padding: 0.5rem;
 }
 
 .inputs {
