--- a/main.css
+++ b/main.css
@@ -22,10 +22,10 @@ body {
     transform: translateY(-5%);
     opacity: 0;
     left: 5%;
-    width: 90%;
+    width: 15%;
     height: 550px;
     margin: 0 auto;
-    background: white;
+    background: #dad5d5;
     transition: transform 0.4s ease,
                 opacity 0.2s ease;
 } 
@@ -55,29 +55,73 @@ body {
     color: black;
 }
 
-.pc {
-    transform: translateX(0);
-    transition: transform 0.1s ease-out;
-}
-
-.pc:hover{
+.main-catalog__item:hover {
     transform: translateX(5%);
 }
 
-.rigth__menu {
+#catalog__one {
+    color: black;
+}
+
+#catalog__two {
+    color: black;
+}
+
+.main-catalog__menu__pc {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
     opacity: 0;
-    padding-left: 5rem;
+    left: 20%;
+    width: 75%;
+    height: 550px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    background: white;
+    transform: translateY(-5%);
+    transition: transform 0.4s ease, opacity 0.2s ease;
 }
 
-ul li:hover > ul,
-.rigth__menu:hover {
-    opacity: 1;
-}
-
-.catalog__item__pc {
+.catalog__menu__pc {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.catalog__menu__pc__items {
+    list-style: none;
+    padding: 0;
+}
+
+.main-catalog__menu__sp {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    opacity: 0;
+    left: 20%;
+    width: 75%;
+    height: 550px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    background: white;
+    transition: opacity 0.2s ease;
+}
+
+.catalog__menu__sp {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.catalog__menu__sp__items {
+    list-style: none;
+    padding: 0;
 }
 
 .number {
@@ -124,15 +168,16 @@ ul li:hover > ul,
 .close {
     position: absolute;
     right: 32px;
-    top: 0;
-    width: 32px;
-    height: 32px;
+    top: 0.5rem;
     opacity: 0.3;
     background: none;
+    border: none;
     }
+
     .close:hover {
     opacity: 1;
     }
+
     .close:before, .close:after {
     position: absolute;
     left: 15px;
@@ -141,9 +186,11 @@ ul li:hover > ul,
     width: 2px;
     background-color: red;
     }
+
     .close:before {
     transform: rotate(45deg);
     }
+
     .close:after {
     transform: rotate(-45deg);
     }
@@ -345,7 +392,7 @@ ul li:hover > ul,
     height: 120px;
     right: 10%;
     background: #F3E8EE;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px 2px black;
     opacity: 0;
     transform: translateY(-5%);
     transition: transform 0.2s ease-out,
@@ -358,7 +405,7 @@ ul li:hover > ul,
     height: 120px;
     right: 5%;
     background: #F3E8EE;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px 2px black;
     opacity: 0;
     transform: translateY(-5%);
     transition: transform 0.2s ease-out,
@@ -371,7 +418,7 @@ ul li:hover > ul,
     height: 120px;
     right: 0;
     background: #F3E8EE;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px 2px black;
     opacity: 0;
     transform: translateY(-5%);
     transition: transform 0.2s ease-out,
@@ -406,7 +453,7 @@ ul li:hover > ul,
     position: fixed;
     display: flex;
     flex-direction: column;
-    top: 30%;
+    top: 25%;
     left: 30%;
     width: 40%;
     border-radius: 1rem;
